fix: align add order buttons

--- a/CASE APP/src/css/style.css
+++ b/CASE APP/src/css/style.css
@@ -6647,7 +6647,7 @@ td a img {
 }
 .product-lists {
   border: 1px solid #fafbfe;
-  box-shadow: 0 4px 4px 0 #ededed40;
+  box-shadow: 0 4px 4px 0 rgba(237, 237, 237, 0.25);
   margin: 0 0 15px;
   padding: 15px;
 }
@@ -7003,7 +7003,7 @@ td a img {
   height: 25px;
   margin-right: 8px;
   vertical-align: 0;
-  border: 3px solid #fc88037d;
+  border: 3px solid rgba(252, 136, 3, 0.49);
   border-right-color: #0079ff;
   animation: 0.75s linear infinite spinner-border;
   border-radius: 50%;
@@ -7029,7 +7029,7 @@ td a img {
   background: #fff;
   border-radius: 5px;
   padding: 10px;
-  box-shadow: 0 4px 4px 0 #ededed40;
+  box-shadow: 0 4px 4px 0 rgba(237, 237, 237, 0.25);
   border: 1px solid #f8f8f8 !important;
   height: 105px;
   flex-direction: column;
@@ -7142,7 +7142,7 @@ td a img {
 }
 .order-list .actionproducts > ul > li .deletebg {
   background: #fff;
-  box-shadow: 0 4px 14px 0 #c7c7c740;
+  box-shadow: 0 4px 14px 0 rgba(199, 199, 199, 0.25);
   width: 30px;
   height: 30px;
   border-radius: 5px;
@@ -7152,7 +7152,7 @@ td a img {
 }
 .productset {
   border: 1px solid #f8f8f8;
-  box-shadow: 0 4px 4px 0 #ededed40;
+  box-shadow: 0 4px 4px 0 rgba(237, 237, 237, 0.25);
   background: #fff;
   margin: 0 0 25px;
   border-radius: 5px;
@@ -7293,7 +7293,7 @@ td a img {
   position: relative;
   border: 10px solid #fff;
   border-radius: 50%;
-  box-shadow: 0 4px 4px 0 #00000040;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 .profile-set .profile-top .profile-contentimg img {
   border-radius: 50px;
